# segmerge

./: .gitmodules  CMakeLists.txt  README.md  main.cu  segmerge.cuh  segmerge.h
slides/: segmerge.pptx
